--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Learning Branch</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, ipsum.</p>
+    <img src="" alt="">
 </body>
 </html>
